fix spurious collapse arrows on gallery li h3s

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1936,6 +1936,10 @@ main {
         text-transform: none;
         line-height: 1.5;
         text-shadow: none;
+        &::before, &::after {
+          content: "";
+          display: none;
+        }
       }
 
       a {
